################################################################################
#
# File:    Makefile.am
# Project: OpenSonATA
# Authors: The OpenSonATA code is the result of many programmers
#          over many years
#
# Copyright 2011 The SETI Institute
#
# OpenSonATA is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
# 
# OpenSonATA is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with OpenSonATA.  If not, see<http://www.gnu.org/licenses/>.
# 
# Implementers of this code are requested to include the caption
# "Licensed through SETI" with a link to setiQuest.org.
# 
# For alternate licensing arrangements, please contact
# The SETI Institute at www.seti.org or setiquest.org. 
#
################################################################################


# Setup files (masks, config, files, etc.) that
# get installed in the setup directory during an install

setupdir = $(prefix)/setup/

# this creates the setup directory
setup_DATA =

dist_setup_DATA = \
	expectedJaneComponents.cfg \
	birdieMask.tcl \
	rcvrBirdieMask.tcl \
	permRfiMask.tcl \
	dxPermRfiMask.tcl \
	testMask.tcl \
	ifc1.cfg \
	ifc2.cfg \
	ifc3.cfg \
	tsig1_lab.cfg \
	tsig2_lab.cfg \
	tsig3_lab.cfg \
	tsig1_field.cfg \
	tsig2_field.cfg \
	tsig3_field.cfg \
	simulator_ifc1.cfg \
	simulator_ifc2.cfg \
	simulator_ifc3.cfg \
	simulator_tsig1.cfg \
	simulator_tsig2.cfg \
	simulator_tsig3.cfg \
	simulator_expectedNssComponents.cfg \
	standardExpectedSonATAComponents.cfg \
	expected3beamSonATAComponents.cfg \
	expectedSonATAComponents-1beam-800KHz-1dx.cfg \
	expectedSonATAComponents-1beam-1dx.cfg \
	expectedSonATAComponents-1beam-800KHz-24dx.cfg \
	expectedSonATAComponents-1beam-beam3-800KHz-24dx.cfg \
	expectedSonATAComponents-2beam-beam1-beam3-800KHz-48dx.cfg \
	expectedSonATAComponents-1beam-beam2-800KHz-24dx.cfg \
	expectedSonATAComponents-24dxs.cfg \
	expectedSonATAComponents-2beam-800KHz-48dx.cfg \
	expectedSonATAComponents-2beam-data-collect-2dx.cfg \
	expectedSonATAComponents-3beam-data-collect-3dx.cfg \
	expectedSonATAComponents-36dxs.cfg \
	expectedSonATAComponents-3beam-800KHz-72dx.cfg \
	expectedSonATAComponents-48dxs.cfg \
	expectedSonATAComponents-546KHz-12dx.cfg \
	expectedSonATAComponents-2beam-546KHz-12dx.cfg \
	expectedSonATAComponents-96dxs.cfg \
	expectedSonATAComponents-beam2-800KHz-24dx.cfg \
	expectedSonATAComponents-jane-test.cfg \
	expectedSonATAComponents-3beam-800KHz-69dx-3zx.cfg \
	expectedSonATAComponents-2beam-800KHz-46dxs-2zx.cfg \
	kes-expectedSonATAComponents-1beam-800KHz-1dx-1zx.cfg \
	kes-expectedSonATAComponents-2beam-2dx.cfg \
	earth.xyz \
	dawn.xyz \
	voyager1.xyz \
	moon.xyz \
	mars.xyz \
	jupiter.xyz \
	saturn.xyz \
	rosetta.xyz \
	newhorizons.xyz \
	deepimpact.xyz \
	cassini.xyz \
	kepler.xyz \
	ifAttnDbOffset.cfg \
	da14.xyz \
	expectedSonATAComponents-1beam-beam3-800KHz-1dx-1zx.cfg \
	expectedSonATAComponents-1beam-beam3-800KHz-2dx-1zx.cfg \
	expectedSonATAComponents-1beam-beam3-800KHz-9dx-1zx.cfg \ 
        da14comp.xyz





